--- a/style.css
+++ b/style.css
@@ -160,7 +160,44 @@
     .mmt_calc_frm{
         font-family: 'Comic Sans MS', cursive, sans-serif;
 
-    }  
+    }
+    .loader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #6e79ad;
+        transition: opacity 0.75s, visibility 0.75s;
+      }
+      
+      .loader--hidden {
+        opacity: 0;
+        visibility: hidden;
+      }
+      
+      .loader::after {
+        content: "";
+        width: 75px;
+        height: 75px;
+        border: 15px solid #dddddd;
+        border-top-color: #bfc6ef;
+        border-radius: 50%;
+        animation: loading 0.75s ease infinite;
+      }
+      
+      @keyframes loading {
+        from {
+          transform: rotate(0turn);
+        }
+        to {
+          transform: rotate(1turn);
+        }
+      }
+    
 
     @media (max-width: 768px) {
         .content {
