--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
         margin: 0;
         padding: 0;
         background-color: #f2f2f2;
+        background: url('score.jpg')
+        
+        
+        
+        
     }
     .container {
         max-width: 1200px;
@@ -12,10 +17,15 @@
         padding: 20px;
         background-color: #fff;
         box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        width:100%;
+        min-height: 100vh;
+        position: relative;
+      
     }
     header {
         text-align: center;
         padding: 20px 0;
+        
     }
     .header-title-box {
         background-color: #f2f2f2;
@@ -156,6 +166,7 @@
         /* font-weight: bold; */
         font-size: 15px;
         
+        
     }
     .mmt_calc_frm{
         font-family: 'Comic Sans MS', cursive, sans-serif;
@@ -188,6 +199,19 @@
         border-radius: 50%;
         animation: loading 0.75s ease infinite;
       }
+      .text {
+        top:30%;
+        left:50%;
+        position: absolute;
+        font-family: 'Franklin Gothic Heavy';
+        font-size: 15vw;
+        color:white;
+        text-shadow: 2px 2px 5px rgba(0,0,0,0.3),
+        5px 5px 70px rgba(255,255,255,0.5);
+        transform: scale(1,1.1) translate(-50%, 10%);
+      }
+      
+      
       
       @keyframes loading {
         from {
@@ -196,8 +220,7 @@
         to {
           transform: rotate(1turn);
         }
-      }
-    
+      }  
 
     @media (max-width: 768px) {
         .content {
@@ -207,3 +230,5 @@
             flex: 1 1 100%;
         }
     }
+
+      
