--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@
     }
     
     /* Responsive adjustments */
-    @media (max-width: 1200px) {
+/*     @media (max-width: 1200px) {
         a img {
             width: 40px;
             height: 40px;
@@ -324,7 +324,7 @@
             height: 20px;
         }
     }
-    
+     */
       
 
 
@@ -353,28 +353,28 @@
     
     /* NEW NEW */
 
-    @media (max-width: 1200px) {
+/*     @media (max-width: 1200px) {
         .yoyo0 {
-            font-size: 14px; /* Slightly smaller font size */
+            font-size: 14px;
         }
     }
     
     @media (max-width: 992px) {
         .yoyo0 {
-            font-size: 12px; /* Smaller font size */
+            font-size: 12px;
         }
     }
     
     @media (max-width: 768px) {
         .yoyo0 {
-            font-size: 10px; /* Even smaller font size */
+            font-size: 10px;
         }
     }
     
     @media (max-width: 576px) {
         .yoyo0 {
-            font-size: 8px; /* Smallest font size for very small screens */
+            font-size: 8px;
         }
-    }
+    } */
 
       
