--- a/style.css
+++ b/style.css
@@ -257,6 +257,30 @@
         transform: scale(0.95);
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     }
+
+        footer {
+        position: relative;
+        bottom: 1%;
+        width: 100%;
+        /* background-color: #333; */
+        color: #fff;
+        padding: 10px;
+        text-align: left;
+    }
+    footer span {
+        color: #a4a1a1;
+    }
+    @media only screen and (max-width: 600px) {
+        footer {
+            font-size: 12px;
+        }
+    }
+    @media only screen and (max-width: 400px) {
+        footer {
+            font-size: 10px;
+        }
+    }
+
     
 
 
