--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@
     footer span {
         color: #a4a1a1;
     }
-    @media only screen and (max-width: 600px) {
+/*     @media only screen and (max-width: 600px) {
         footer {
             font-size: 12px;
         }
@@ -280,8 +280,29 @@
             font-size: 10px;
         }
     }
+ */
 
-    
+		@media only screen and (max-width: 600px) {
+			.header-title {
+				font-size: 18px;
+			}
+			footer {
+				font-size: 12px;
+			}
+		}
+		@media only screen and (max-width: 400px) {
+			.header-title {
+				font-size: 14px;
+			}
+			footer {
+				font-size: 10px;
+			}
+		}
+
+
+
+
+
 
 
 
