--- a/style.css
+++ b/style.css
@@ -282,18 +282,12 @@
     }
  */
 
-		@media only screen and (max-width: 600px) {
-			.header-title {
-				font-size: 18px;
-			}
+		@media only screen and (max-width: 600px)
 			footer {
 				font-size: 12px;
 			}
 		}
-		@media only screen and (max-width: 400px) {
-			.header-title {
-				font-size: 170px;
-			}
+		@media only screen and (max-width: 400px) 
 			footer {
 				font-size: 7px;
 			}
