--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@
     .yoyo0{
         font-family: "monospace";
         /* font-weight: bold; */
-        font-size: 15px;
+/*         font-size: 15px; */
         margin: 20px 0;
         
         
