--- a/style.css
+++ b/style.css
@@ -689,6 +689,15 @@ footer.dark-mode,
         }
       } */
 
+@media (max-width: 768px) {
+        .content {
+            flex-direction: column;
+        }
+        .calculator, .sidebar {
+            flex: 1 1 100%;
+        }
+    }
+
 @media (max-width: 480px) {
   .switch {
     width: 10%;
